Update REACT_APP_BASE_URI in .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URI="https://server-m1ly.onrender.com"
+REACT_APP_BASE_URI="http://localhost:8000"
+# REACT_APP_BASE_URI="https://server-m1ly.onrender.com"
